# url-player

./: CMakeLists.txt  README.md  main.cpp
music-storage/: CMakeLists.txt
music-storage/include/: json-music.h  music-storage.h  song.h
music-storage/src/: json-music.cpp  song.cpp
resources/: menu-config.json  music-panel-config.json  music.json  ui-config.json
resources/scripts/: autoplay.js  starter.js
storage/: CMakeLists.txt
storage/include/: json-storage.h  storage-file.h  storage.h
storage/json-storage/include/: storage-file.h
storage/json-storage/src/: storage-file.cpp
storage/src/: json-storage.cpp  storage-file.cpp
ui/: CMakeLists.txt
ui/include/: button.h  confirmation-window.h  dialog-window.h  menu.h  music-list.h  music-panel.h  music_list.h
ui/src/: button.cpp  confirmation-window.cpp  dialog-window.cpp  menu.cpp  music-list.cpp  music-panel.cpp  music_list.cpp
ui/ui-config/include/: json-menu-config.h  json-music-panel-config.h  json-ui-config.h  menu-config.h  music-panel-config.h  ui-config.h  ui-json-serializer.h
ui/ui-config/src/: json-menu-config.cpp  json-music-panel-config.cpp  json-ui-config.cpp  ui-json-serializer.cpp
url-player/: CMakeLists.txt
url-player/include/: player.h  web-view-browser.h  web-view-window.h
url-player/js-storage/include/: js-reader.h
url-player/js-storage/src/: js-reader.cpp
url-player/src/: player.cpp  web-view-browser.cpp  web-view-window.cpp
